force-app/main/default/objects/BN_User_History_Login__c/BN_User_History_Login__c.object-meta.xml
<CustomObject>
    <label>BN User History Login</label>
    <nameField>
        <displayFormat>BNHL-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BN User History Login</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>