force-app/main/default/objects/BN_User_History_Login__c/fields/BN_User__c.field-meta.xml
<CustomField>
    <fullName>BN_User__c</fullName>
    <label>BN User</label>
    <referenceTo>BN_User__c</referenceTo>
    <relationshipLabel>BN User History Login</relationshipLabel>
    <relationshipName>BN_User_History_Login</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>