force-app/main/default/objects/BN_User_History_Login__c/fields/isLogout__c.field-meta.xml
<CustomField>
    <fullName>isLogout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLogout</label>
    <type>Checkbox</type>
</CustomField>